--- a/src/components/Card/index.astro
+++ b/src/components/Card/index.astro
@@ -1,12 +1,12 @@
 ---
 import { getEntry } from 'astro:content';
-import { Frame, Stack } from '@/astro-custom-layout-components';
+import { Frame, Stack } from '#astro-custom-layout-components/index.js';
 // import { Debug } from 'astro:components';
 // import type { HTMLAttributes } from 'astro/types';
 // import type { CollectionEntry } from 'astro:content';
 import { format } from 'date-fns';
 import { Image } from 'astro:assets';
-// import type { BlogSchemaType } from '@/schemas/index.ts';
+// import type { BlogSchemaType } from '#schemas/index.ts';
 import CardTop from './top-bottom.astro';
 
 // interface Props extends HTMLAttributes<'a'> extends CollectionEntry<'blog'>.data;
