--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,12 +1,16 @@
 ---
 import HeaderLink from './HeaderLink.astro';
 
-import { Box, Cluster, Switcher } from '@/astro-custom-layout-components';
+import {
+  Box,
+  Cluster,
+  Switcher,
+} from '#astro-custom-layout-components/index.js';
 
-// import { DropDown as HeadlessUI } from '@/ui/react/DropDown.tsx';
-import NavDropDown from '@/ui/web-components/NavDropDown.astro';
+// import { DropDown as HeadlessUI } from '#ui/react/DropDown.tsx';
+import NavDropDown from '#ui/web-components/NavDropDown.astro';
 
-// import NavDropDown from '@/ui/react/Select.tsx'
+// import NavDropDown from '#ui/react/Select.tsx'
 ---
 
 <Box padding="var(--s1)" borderWidth="0">
