--- a/src/components/MyStackDemo.astro
+++ b/src/components/MyStackDemo.astro
@@ -1,5 +1,5 @@
 ---
-import { Box, Stack, Center } from '@cc/index';
+import { Box, Stack, Center } from '#astro-custom-layout-components/index.js';
 const W = '120';
 function generateRandomString() {
   const length = 8;
