--- a/src/layouts/BareLayout.astro
+++ b/src/layouts/BareLayout.astro
@@ -1,7 +1,7 @@
 ---
 import BaseHead from '#components/BaseHead.astro';
 
-import { Cover, Center } from '@/astro-custom-layout-components';
+import { Cover, Center } from '#astro-custom-layout-components/index.js';
 
 interface Props {
   title?: string;
