--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,9 +1,9 @@
 ---
 import { getEntry } from 'astro:content';
-import { Box, Stack, Center } from '@/astro-custom-layout-components';
+import { Box, Stack, Center } from '#astro-custom-layout-components/index.js';
 import { Image } from 'astro:assets';
 
-import type { BlogSchemaType } from '@/schemas/index.ts';
+import type { BlogSchemaType } from '#schemas/index.ts';
 
 import FormattedDate from '#components/FormattedDate.astro';
 // import Author from '@cc/Author.astro'
