--- a/src/pages/demo/harmonic-demo.astro
+++ b/src/pages/demo/harmonic-demo.astro
@@ -11,7 +11,7 @@
 // }
 
 import Layout from '#layouts/Layout.astro';
-import { Cluster, Box } from '@/astro-custom-layout-components';
+import { Cluster, Box } from '#astro-custom-layout-components/index.js';
 ---
 
 <Layout>
