--- a/src/pages/demo/reel-demo.astro
+++ b/src/pages/demo/reel-demo.astro
@@ -1,5 +1,5 @@
 ---
-import { Reel, Frame } from '@/astro-custom-layout-components';
+import { Reel, Frame } from '#astro-custom-layout-components/index.js';
 import Card from '#components/Card.astro';
 import { Image } from 'astro:assets';
 
