--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from '#layouts/Layout.astro';
-import { Center } from '@/astro-custom-layout-components';
-import Box from '@/astro-custom-layout-components/Box/index.astro';
-// import AppDrawer from '@/web-components/AppDrawer.astro';
+import { Center } from '#astro-custom-layout-components/index.js';
+import Box from '#astro-custom-layout-components/Box/index.astro';
+// import AppDrawer from '#web-components/AppDrawer.astro';
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
