--- a/src/pages/splash.astro
+++ b/src/pages/splash.astro
@@ -3,7 +3,7 @@ import Layout from '#layouts/SplashLayout.astro';
 
 // import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
 
-import { Box, Stack } from '@/astro-custom-layout-components';
+import { Box, Stack } from '#astro-custom-layout-components/index.js';
 ---
 
 <Layout title="home" description="testing css">
