--- a/src/ui/astro/modal/Modal.astro
+++ b/src/ui/astro/modal/Modal.astro
@@ -1,7 +1,7 @@
 ---
 // intentinoally disruptive
-// import { Switcher, Box, Cover } from '@cc/index';
-// import { isOpen } from '@/store/index.ts';
+// import { Switcher, Box, Cover } from '#astro-custom-layout-components/index.js';
+// import { isOpen } from '#store/index.ts';
 
 interface Props {
   open?: boolean;
