--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import { Box, Cluster } from '@/astro-custom-layout-components';
+import { Box, Cluster } from '#astro-custom-layout-components/index.js';
 
 const today = new Date();
 ---
