--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -1,6 +1,6 @@
 ---
 import type { HTMLAttributes } from 'astro/types';
-import { Cluster } from '@/astro-custom-layout-components';
+import { Cluster } from '#astro-custom-layout-components/index.js';
 type Props = HTMLAttributes<'a'> & {
   slug?: string;
   children: unknown;
