--- a/src/layouts/NotCenterLayout.astro
+++ b/src/layouts/NotCenterLayout.astro
@@ -2,7 +2,7 @@
 import BaseHead from '#components/BaseHead.astro';
 import Header from '#components/Header.astro';
 import Footer from '#components/Footer.astro';
-import { Cover } from '@/astro-custom-layout-components';
+import { Cover } from '#astro-custom-layout-components/index.js';
 
 interface Props {
   title?: string;
