--- a/src/pages/demo/colums-demo.astro
+++ b/src/pages/demo/colums-demo.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '#layouts/Layout.astro';
-import { getRandomPic } from '@/lib/index.ts';
+import { getRandomPic } from '#lib/index.ts';
 
 import { Image } from 'astro:assets';
 
