--- a/src/pages/demo/sidebar-demo.astro
+++ b/src/pages/demo/sidebar-demo.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '#layouts/SimpleLayout.astro';
 
-import { Box, Sidebar } from '@/astro-custom-layout-components';
+import { Box, Sidebar } from '#astro-custom-layout-components/index.js';
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
