--- a/src/pages/demo/switcher-demo.astro
+++ b/src/pages/demo/switcher-demo.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '#layouts/Layout.astro';
-import { Box, Switcher } from '@/astro-custom-layout-components';
+import { Box, Switcher } from '#astro-custom-layout-components/index.js';
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
