--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from '@/layouts/Layout.astro';
+import BaseLayout from '#layouts/Layout.astro';
 import { getCollection } from 'astro:content';
 
 import TagContainer from '#components/TagContainer.astro';
