--- a/src/ui/web-components/AppDrawer.astro
+++ b/src/ui/web-components/AppDrawer.astro
@@ -38,7 +38,7 @@
       super();
 
       // Setup a click listener on <app-drawer> itself.
-      this.addEventListener('click', (e) => {
+      this.addEventListener('click', (_e) => {
         // Don't toggle the drawer if it's disabled.
         if (this.disabled) {
           return;
