do this so testing works

--- a/src/pages/demo/modal-demo.astro
+++ b/src/pages/demo/modal-demo.astro
@@ -14,7 +14,7 @@ import Layout from '#layouts/BareLayout.astro';
 // import Modal from '#ui/astro/modal/Modal.astro';
 // import Modal from '#web-component/astro-modal/index.astro';
 import { Box } from '#astro-custom-layout-components/index.js';
-import { isOpen } from '#store/index.ts';
+// import { isOpen } from '#store/index.ts';
 ---
 
 <Layout>
