--- a/src/styles/GlobalStyles.astro
+++ b/src/styles/GlobalStyles.astro
@@ -1,5 +1,5 @@
 ---
-// import 'open-props/postcss/style'
+import 'open-props/postcss/style';
 import 'open-props/postcss/buttons';
 import 'open-props/postcss/normalize';
 import './variables.css';
