--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,15 +3,20 @@ import BaseHead from '#components/BaseHead.astro';
 import Header from '#components/Header.astro';
 import Footer from '#components/Footer.astro';
 import { Cover, Center } from '#astro-custom-layout-components/index.js';
+import type { RmUnitType } from '#astro-custom-layout-components/Types.js';
 
 interface Props {
   title?: string;
   description?: string;
+  centerWidth?: RmUnitType;
   children: unknown;
 }
 
-const { title = 'I NEED A TITLE', description = 'no description provided' } =
-  Astro.props;
+const {
+  centerWidth = 'var(--measure)',
+  title = 'I NEED A TITLE',
+  description = 'no description provided',
+} = Astro.props;
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 ---
@@ -26,7 +31,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
     <Cover centeredElement="center-l" noPad={true} space="0">
       <Header />
 
-      <Center>
+      <Center max={centerWidth}>
         <slot />
       </Center>
       <Footer />
