--- a/src/pages/demo/grid-demo.astro
+++ b/src/pages/demo/grid-demo.astro
@@ -17,7 +17,11 @@ const pic = getRandomSrc();
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
-<Layout title="test Me" description="Lorem ipsum dolor sit amet">
+<Layout
+  centerWidth="100vw"
+  title="test Me"
+  description="Lorem ipsum dolor sit amet"
+>
   <!-- space set the gap on the grid -->
   <Grid space="1rem" min=`${W}px`>
     <Card>
