--- a/src/components/Card/index.astro
+++ b/src/components/Card/index.astro
@@ -1,4 +1,5 @@
 ---
+import type { HTMLAttributes } from 'astro/types';
 import { getEntry } from 'astro:content';
 import { Frame, Stack } from '#astro-custom-layout-components/index.js';
 // import { Debug } from 'astro:components';
@@ -13,7 +14,7 @@ import CardTop from './top-bottom.astro';
 
 // type EntryType = CollectionEntry<'blog'>;
 
-interface Props {
+interface Props extends HTMLAttributes<'article'> {
   slug: string;
   foregroundColor?: string;
   backgroundColor?: string;
