--- a/src/pages/demo/reel-demo.astro
+++ b/src/pages/demo/reel-demo.astro
@@ -3,7 +3,7 @@ import { Reel, Frame } from '#astro-custom-layout-components/index.js';
 import Card from '#components/Card.astro';
 import { Image } from 'astro:assets';
 
-import Layout from '#layouts/SimpleLayout.astro';
+import Layout from '#layouts/Layout.astro';
 
 const W = '50';
 const H = '50';
@@ -14,7 +14,7 @@ const getRandomSrc = () => {
 };
 ---
 
-<Layout>
+<Layout centerWidth="100vw">
   <Reel itemWidth="10rem" noBar={false} space="var(--s3)">
     <Card>
       <Frame ratio="16:9" slot="image-slot">
