--- a/src/pages/demo/stack-demo.astro
+++ b/src/pages/demo/stack-demo.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '#layouts/SimpleLayout.astro';
+import Layout from '#layouts/Layout.astro';
 
 import MyStackDemo from '#components/MyStackDemo.astro';
 ---
