simple import fix

--- a/src/layouts/BareLayout.astro
+++ b/src/layouts/BareLayout.astro
@@ -1,7 +1,6 @@
 ---
+import { Center,Cover } from '#astro-custom-layout-components/index.js';
 import BaseHead from '#components/BaseHead.astro';
-
-import { Cover, Center } from '#astro-custom-layout-components/index.js';
 
 interface Props {
   title?: string;
