--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,15 +1,13 @@
 ---
-import Layout from '#layouts/Layout.astro';
-import { getEntry } from 'astro:content';
-import { Box, Stack, Center } from '#astro-custom-layout-components/index.js';
-import { Image } from 'astro:assets';
-
-import type { BlogSchemaType } from '#schemas/index.ts';
-
-import FormattedDate from '#components/FormattedDate.astro';
 // import Author from '@cc/Author.astro'
-
 import type { AstroComponentFactory } from 'astro/runtime/server/render/astro/index.js';
+import { Image } from 'astro:assets';
+import { getEntry } from 'astro:content';
+
+import { Box, Center,Stack } from '#astro-custom-layout-components/index.js';
+import FormattedDate from '#components/FormattedDate.astro';
+import Layout from '#layouts/Layout.astro';
+import type { BlogSchemaType } from '#schemas/index.ts';
 
 interface Props {
   blogData: BlogSchemaType;
