--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,8 +1,9 @@
 ---
 import { getCollection } from 'astro:content';
+
+import { Box,Switcher } from '#astro-custom-layout-components/index.js';
 import FormattedDate from '#components/FormattedDate.astro';
 import Layout from '#layouts/Layout.astro';
-import { Switcher, Box } from '#astro-custom-layout-components/index.js';
 
 const posts = (await getCollection('blog')).sort(
   (a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf(),
