--- a/src/pages/demo/imposter-demo.astro
+++ b/src/pages/demo/imposter-demo.astro
@@ -1,6 +1,6 @@
 ---
+import { Box,Imposter } from '#astro-custom-layout-components/index.js';
 import Layout from '#layouts/Layout.astro';
-import { Imposter, Box } from '#astro-custom-layout-components/index.js';
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
