--- a/src/pages/demo/reel-demo.astro
+++ b/src/pages/demo/reel-demo.astro
@@ -1,8 +1,8 @@
 ---
-import { Reel, Frame } from '#astro-custom-layout-components/index.js';
-import Card from '#components/Card.astro';
 import { Image } from 'astro:assets';
 
+import { Frame,Reel } from '#astro-custom-layout-components/index.js';
+import Card from '#components/Card.astro';
 import Layout from '#layouts/Layout.astro';
 
 const W = '50';
