--- a/src/components/Dialouge.astro
+++ b/src/components/Dialouge.astro
@@ -1,5 +1,5 @@
 ---
-import { Box, Stack, Center } from '#astro-custom-layout-components/index.js';
+import { Box, Center,Stack } from '#astro-custom-layout-components/index.js';
 
 import CloseBtn from './CloseBtn.astro';
 import ConfetiBtn from './ConfettiButton.astro';
