--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,9 @@
 ---
-import BaseHead from '#components/BaseHead.astro';
-import Header from '#components/Header.astro';
-import Footer from '#components/Footer.astro';
-import { Cover, Center } from '#astro-custom-layout-components/index.js';
+import { Center,Cover } from '#astro-custom-layout-components/index.js';
 import type { RmUnitType } from '#astro-custom-layout-components/Types.js';
+import BaseHead from '#components/BaseHead.astro';
+import Footer from '#components/Footer.astro';
+import Header from '#components/Header.astro';
 
 interface Props {
   title?: string;
