--- a/src/pages/demo/harmonic-demo.astro
+++ b/src/pages/demo/harmonic-demo.astro
@@ -10,8 +10,8 @@
 //   return value
 // }
 
+import { Box,Cluster } from '#astro-custom-layout-components/index.js';
 import Layout from '#layouts/Layout.astro';
-import { Cluster, Box } from '#astro-custom-layout-components/index.js';
 ---
 
 <Layout centerWidth="100vw">
