wc/no-constructor-attributes': 'warn',

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,7 +22,7 @@ import HeaderLink from './HeaderLink.astro';
     <Cluster align="baseline" justify="flex-start">
       <HeaderLink href="/">Home</HeaderLink>
       <HeaderLink href="/blog">Blog</HeaderLink>
-      <HeaderLink href="/about">About</HeaderLink>
+      <!-- <HeaderLink href="/about">About</HeaderLink> -->
       <HeaderLink href="/ui">Ui</HeaderLink>
       <HeaderLink href="/tags">tags</HeaderLink>
     </Cluster>
