--- a/src/astro-custom-layout-components/Cluster/index.astro
+++ b/src/astro-custom-layout-components/Cluster/index.astro
@@ -5,7 +5,7 @@ import type {
   AlignItemsTypes,
   JustifyContentTypes,
   RmUnitType,
-} from '../Types';
+} from '@repo/styles/Types';
 
 // const LIST = 'list'
 
@@ -27,7 +27,7 @@ const {
   <slot />
 </cluster-l>
 
-<script src="./Cluster"></script>
+<script src="./Cluster.js"></script>
 
 <!--
 side	string	"left"	Which element to treat as the sidebar (all values but "left" are considered "right")
