--- a/src/astro-custom-layout-components/Grid/index.astro
+++ b/src/astro-custom-layout-components/Grid/index.astro
@@ -1,4 +1,6 @@
 ---
+import './Grid.css';
+
 import type { RmUnitType } from '../Types';
 
 interface Props {
@@ -15,12 +17,3 @@ const { min, space } = Astro.props;
 </grid-l>
 
 <script src="./Grid.js"></script>
-
-<style is:global>
-  grid-l {
-    display: grid;
-    grid-gap: var(--s1);
-    align-content: start;
-    grid-template-columns: 100%;
-  }
-</style>
