--- a/src/astro-custom-layout-components/Stack/Stack.css
+++ b/src/astro-custom-layout-components/Stack/Stack.css
@@ -2,8 +2,10 @@ stack-l {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  gap: var(--s1);
 }
 
-stack-l > * + * {
-  margin-block-start: var(--s1);
+.stack-exception,
+.stack-exception + * {
+  --space: 3rem;
 }
