--- a/src/astro-custom-layout-components/Container/index.astro
+++ b/src/astro-custom-layout-components/Container/index.astro
@@ -1,5 +1,5 @@
 ---
-import './Container.css';
+// const LIST = 'list'
 
 interface Props {
   name: string;
@@ -14,6 +14,12 @@ const { name } = Astro.props;
 </container-l>
 
 <script src="./Container.js"></script>
+
+<style is:global>
+  container-l {
+    display: block;
+  }
+</style>
 
 <!-- 
 side	string	"left"	Which element to treat as the sidebar (all values but "left" are considered "right")
