--- a/src/astro-custom-layout-components/Cover/Cover.css
+++ b/src/astro-custom-layout-components/Cover/Cover.css
@@ -1,6 +1,6 @@
 cover-l {
   display: flex;
   flex-direction: column;
-  min-block-size: 100vh;
+  min-block-size: 100dvh;
   padding: var(--s1);
 }
