--- a/src/astro-custom-layout-components/Cover/index.astro
+++ b/src/astro-custom-layout-components/Cover/index.astro
@@ -11,11 +11,7 @@ interface Props {
   children: unknown;
 }
 
-const {
-  centeredElement: centered,
-
-  ...rest
-} = Astro.props;
+const { centeredElement: centered, ...rest } = Astro.props;
 ---
 
 <cover-l centered={centered} {...rest}>
@@ -23,10 +19,3 @@ const {
 </cover-l>
 
 <script src="./Cover.js"></script>
-
-<!--
-side	string	"left"	Which element to treat as the sidebar (all values but "left" are considered "right")
-sideWidth	string		Represents the width of the sidebar when adjacent. If not set (null) it defaults to the sidebar's content width
-contentMin	string	"50%"	A CSS percentage value. The minimum width of the content element in the horizontal configuration
-space	string	"var(--s1)"	A CSS margin value representing the space between the two elements
-noStretch	boolean	false	Make the adjacent elements adopt their natural height -->
