--- a/src/astro-custom-layout-components/Sidebar/index.astro
+++ b/src/astro-custom-layout-components/Sidebar/index.astro
@@ -1,34 +1,38 @@
 ---
-import type { Percentage, RmUnitType } from '../Types.ts';
+import './Sidebar.css';
+
+import type { Percentage, RmUnitType } from '@repo/styles/Types';
+
+/**
+ * @module sidebar-l
+ * @description
+ * A custom element for placing two elements side-by-side. If space permits, the sidebar element has a set width, and the companion takes up the rest of the available horizontal space. If not, the elements are collapsed into a single column, each taking up 100% of the horizontal space.
+ * @property {string} side=left Which element to treat as the sidebar (all values but "left" are considered "right")
+ * @property {string} sideWidth Represents the width of the sidebar _when_ adjacent. If not set (`null`) it defaults to the sidebar's content width
+ * @property {string} contentMin=50% A CSS **percentage** value. The minimum width of the content element in the horizontal configuration
+ * @property {string} space=var(--s1) A CSS margin value representing the space between the two elements
+ * @property {boolean} noStretch=false Make the adjacent elements adopt their natural height
+ */
 
 interface Props {
   side?: 'left' | 'right';
-  sideWidth?: RmUnitType; //Represents the width of the sidebar when adjacent. If not set (null) it defaults to the sidebar's content width
-  contentMin?: Percentage; //A CSS percentage value. The minimum width of the content element in the horizontal configuration
-  space?: RmUnitType; //"var(--s1)"
+  sideWidth?: RmUnitType;
+  contentMin?: Percentage;
+  space?: RmUnitType;
   noStretch?: boolean;
 }
-const props = Astro.props;
+const { side = 'left', ...rest } = Astro.props;
 ---
 
-<sidebar-l {...props}>
-  <slot />
-</sidebar-l>
+<>
+  <sidebar-l side={side} {...rest}>
+    <slot />
+  </sidebar-l>
+</>
 
 <script src="./Sidebar.js"></script>
 
-<style is:global>
-  sidebar-l {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  sidebar-l > * {
-    flex-grow: 1;
-  }
-</style>
-
-<!-- 
+<!--
 side	string	"left"	Which element to treat as the sidebar (all values but "left" are considered "right")
 sideWidth	string		Represents the width of the sidebar when adjacent. If not set (null) it defaults to the sidebar's content width
 contentMin	string	"50%"	A CSS percentage value. The minimum width of the content element in the horizontal configuration
