--- a/src/astro-custom-layout-components/Stack/index.astro
+++ b/src/astro-custom-layout-components/Stack/index.astro
@@ -3,14 +3,14 @@ import './Stack.css';
 
 import type { RmUnitType } from '../Types';
 interface Props {
-  space?: RmUnitType; //"var(--s1)"
+  space?: RmUnitType; //"var(--s000)"
   recursive?: boolean; //false
   splitAfter?: number; // no default. The element after which to split the stack with an auto margin
 }
-const { space = 'var(--s1)', recursive = false, splitAfter } = Astro.props;
+const props = Astro.props;
 ---
 
-<stack-l space={space} recursive={recursive} splitAfter={splitAfter}>
+<stack-l {...props}>
   <slot />
 </stack-l>
 
