--- a/src/pages/demo/switcher-demo.astro
+++ b/src/pages/demo/switcher-demo.astro
@@ -15,9 +15,9 @@ import Layout from '#layouts/Layout.astro';
 
       <Box borderWidth="0">
         <Switcher>
-          <Box borderWidth="1px">x</Box>
-          <Box borderWidth="1px">x</Box>
-          <Box borderWidth="1px">x</Box>
+          <Box>x</Box>
+          <Box>x</Box>
+          <Box>x</Box>
         </Switcher>
       </Box>
     </Box>
