--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,30 +9,18 @@ import Layout from '#layouts/Layout.astro';
 <Layout title="About Me" description="Lorem ipsum dolor sit amet">
   <Stack space="var(--s3)">
     <Box>
-      <pre
-        class="pre-wrap">&lt;div class="box invert"&gt;
-Here using the box class rather than the Box web component.
-&lt;/div&gt;</pre>
+      <p>Lorem ipsum dolor sit amet</p>
     </Box>
     <Box invert>
-      <pre
-        class="pre-wrap">&lt;div class="box invert"&gt;
-Here using the box class rather than the Box web component.
-&lt;/div&gt;</pre>
-    </Box>
-
-    <Box invert>
-      <pre
-        class="pre-wrap">&lt;div class="box invert"&gt;
-Here using the box class rather than the Box web component.
-&lt;/div&gt;</pre>
+      <p>Lorem ipsum dolor sit amet</p>
     </Box>
 
     <Box>
-      <pre
-        class="pre-wrap">&lt;div class="box invert"&gt;
-Here using the box class rather than the Box web component.
-&lt;/div&gt;</pre>
+      <p>Lorem ipsum dolor sit amet</p>
+    </Box>
+
+    <Box invert>
+      <p>Lorem ipsum dolor sit amet</p>
     </Box>
   </Stack>
 </Layout>
